re-adjusted the layout, the views are functioning

--- a/views/projectList.hbs
+++ b/views/projectList.hbs
@@ -1,8 +1,5 @@
-{{!< layouts/page}}
-{{!-- <h1>This is the Project List page</h1>
-<p>Words: {{ msg }}</p>
-<br> --}}
-
+{{!< main}}
+{{> heading }}
 <!-- Begin Main View Container -->
 <div class="mainView container pt-2">
     <div id="projectListView">
@@ -42,3 +39,4 @@
     </div>
 </div>
 <!-- End Main View Container -->
+{{> footer }}
