--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,28 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        footer {
+            height: 50px;
+        }
+        .mainView {
+            min-height: 100%;
+            margin-bottom: -50px;
+        }
+    </style>
 </head>
 <body>
-    {{!-- <!-- Begin Header Container-->
-    	<div class="container">
-    		<div class="row pt-2 pr-3">
-	    		<div class="col-10 empty-container">
-			  	</div>
-				<div class="col-1 justify-content-lg-right">
-					<h4 id="logo"><a href="/siteMap">mypmwork.com</a></h4>
-  				</div>
-  			</div>
-    		<div class="row justify-content-lg-center">
-			  	<div class="col col-lg-auto pt-0" id="returnUser">
-			  		<h1>Project List</h1>
-		  		</div>
-		  	</div>
-		</div>
-    <!-- End Header Container--> --}}
-    {{!-- {{Heading}} --}}
-    <p>This is main.hbs</p>
     {{{ body }}}
-    {{!-- {{> footer }} --}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
