--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,11 +10,11 @@
         <!-- Begin Middle column -->
         <div class="col-6">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="#">mypmwork.com</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">help</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="/siteMap">about</a></li>
-                <li class="nav-item"><a class="nav-link" href="/logout">sign out</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Perro PM</a></li>
+                <li class="nav-item"><a class="nav-link" >help</a></li>
+                <li class="nav-item"><a class="nav-link" >resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">about</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">sign out</a></li>
             </ul>
         </div>
         <!-- End Middle column -->
