--- a/views/partials/heading.hbs
+++ b/views/partials/heading.hbs
@@ -1,10 +1,15 @@
+<style>
+	#logo {
+		width: 100px;
+	}
+</style>
 <!-- Begin Header Container-->
 <div class="container">
 	<div class="row pt-2 pr-3">
 		<div class="col-10 empty-container">
 		</div>
 		<div class="col-1 justify-content-lg-right">
-			<h4 id="logo"><a href="/siteMap">mypmwork.com</a></h4>
+			<h4 id="logo"><a href="/projects">Perro PM</a></h4>
 		</div>
 	</div>
 	<div class="row justify-content-lg-center">
