added orginal project documents on project folder

--- a/views/projectList.hbs
+++ b/views/projectList.hbs
@@ -26,7 +26,7 @@
             <tbody>
                 {{#each projects}}
                 <tr class="table" scope="row">
-                    <td class="border-right-dark"><a class="task-links" href="/projectSummary/{{id}}">{{title}}</a></td>
+                    <td class="border-right-dark"><a class="task-links" href="/projects/{{id}}">{{title}}</a></td>
                     <td>{{completedTasks}}</td>
                     <td>{{remainingTasks}}</td>
                     <td>{{totalTasks}}</td>
